Fix spacing on reviewer box

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -882,6 +882,8 @@ body.single-tour-operator {
 	position: relative;
 	width: 170px;
 
+	& + .lsx-to-contact-name { margin-top: 2.4rem; }
+
 	@include media('>=phone') {
 		margin-top: 0;
 
